[package]
name = "vproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
dotenv = "0.15"
hyper = { version = "0.14", features = ["client"] }
tokio = { version = "1.34", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.4", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
